--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "ctang",
-            "email": "ctang1@ibenben.com"
+            "email": "caroltc818@gmail.com"
         }
     ],
     "minimum-stability": "dev",
